removed xmlstarlet requirement